 - Previously used a lengthy 0.{'0' x '8'} scheme.
 - Now uses a 0.{'0' x 6} scheme for clarity.
 - The 1.x on the box is due in part to this change.
 - See: https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [03 Internals Overhaul]
 - MooseX::Declare is too pesky to use with perltidy (even sweetened)
 - So everything has been entirely rewritten in pure Moose with simple type checks.

 [Dependencies::Stats]
 - Dependencies changed since 0.03000101, see misc/*.deps* for details
 - build: -1
 - configure: +3 -1 (recommends: +1)
 - develop: +55 -4 (recommends: +1 -1, suggests: +1 ↑1)
 - runtime: +2 -1 (recommends: +1)
 - test: +4 ↑1 ↓1 -2 (recommends: +4)

0.03000101 2013-05-07T08:56:28Z
 [!Major Changes]
 - Path::Class replaced with Path::Tiny
 - Tests/Utils use Path::Iterator::Rule instead of File::Find::Rule
 - Packaging toolchain updated
 - Carp warnings now only Log4Perl warnings so you can hide them if needed.

 [Dependencies::Stats]
 - Dependencies changed since 0.02071411, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +8 (recommends: ↑1, suggests: ↑1)
 - runtime: +3 -1
 - test: +2 ↑1 -3

 [Documentation]
 - license copyright year update
 - license reindent
 - license address update
 - add README.mkdn

 [Internals]
 - add $AUTHORITY to all packages
 - move $VERSION declaration out of BEGIN
 - __END__ before =pod
 - Code now tidyied successfully under Perl::Tidy::Sweetened

 [Meta]
 - add x_authortiy
 - bug tracker = github issues
 - git uris to https://

 [Packaging]
 - use test_requires in Build.PL
 - leave xt/ tests in xt/
 - versions via git

0.02071411 2011-04-04T08:40:21Z
 [BugFix]
 - Add temporary hack for rt#67210 - methods with return types fail in void context.
 - Fix some 'invalid' changelog entries.

 [Dependencies::Stats]
 - Dependencies changed since 0.02021113, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +1 (recommends: +1, suggests: +1)
 - runtime: +1 -7
 - test: +9

 [Internals]