@@ -24,8 +24,8 @@ my %WriteMakefileArgs = (
   "NAME" => "ELF::Extract::Sections",
   "PREREQ_PM" => {
     "Carp" => 0,
-    "Class::Load" => 0,
     "Log::Log4perl" => "1.21",
+    "Module::Runtime" => 0,
     "Moose" => "0.76",
     "Moose::Role" => 0,
     "MooseX::Has::Sugar" => "0.0300",
@@ -57,12 +57,12 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Carp" => 0,
-  "Class::Load" => 0,
   "Devel::CheckBin" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "FindBin" => 0,
   "Log::Log4perl" => "1.21",
+  "Module::Runtime" => 0,
   "Moose" => "0.76",
   "Moose::Role" => 0,
   "MooseX::Has::Sugar" => "0.0300",
